log
Sat 18 May 2024 10:18:17 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:17: error: subscripted value is neither array nor pointer nor vector
   57 |          sudo[i][k] = copy(n);
      |                 ^
sudoku.c:56:16: error: variable ‘k’ set but not used [-Werror=unused-but-set-variable]
   56 |       for (int k = 0; i < 9; i++){
      |                ^
cc1: all warnings being treated as errors
Compilation failed
cd9c535
Sat 18 May 2024 10:18:37 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:17: error: subscripted value is neither array nor pointer nor vector
   57 |          sudo[i][j] = copy(n);
      |                 ^
sudoku.c:56:16: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
   56 |       for (int j = 0; i < 9; i++){
      |                ^
cc1: all warnings being treated as errors
Compilation failed
7a63616
Sat 18 May 2024 10:24:47 PM UTC: 
 sudoku.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
1549249
Sat 18 May 2024 10:29:58 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|5
total_score: 0/70
0b7f44b
Sat 18 May 2024 10:31:53 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
026d928
Sat 18 May 2024 10:33:37 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
56d42e9
Sat 18 May 2024 10:34:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
4d11be9
Sat 18 May 2024 10:44:09 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
8220fd9
Sat 18 May 2024 10:48:44 PM UTC: 
 sudoku.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  1|5
total_score: 5/70
37e7d58
Sat 18 May 2024 10:50:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
83f2be7
